@@ -17,6 +17,9 @@ operator<<= (::DDS::ResourceLimitsQosPolicy &ddsqos, const ::DDS_ResourceLimitsQ
   ddsqos.max_samples = qos.max_samples;
   ddsqos.max_instances = qos.max_instances;
   ddsqos.max_samples_per_instance = qos.max_samples_per_instance;
+  ddsqos.initial_samples = qos.initial_samples;
+  ddsqos.initial_instances = qos.initial_instances;
+  ddsqos.instance_hash_buckets = qos.instance_hash_buckets;
 }
 
 inline void
@@ -25,6 +28,9 @@ operator<<= (::DDS_ResourceLimitsQosPolicy &ddsqos, const ::DDS::ResourceLimitsQ
   ddsqos.max_samples = qos.max_samples;
   ddsqos.max_instances = qos.max_instances;
   ddsqos.max_samples_per_instance = qos.max_samples_per_instance;
+  ddsqos.initial_samples = qos.initial_samples;
+  ddsqos.initial_instances = qos.initial_instances;
+  ddsqos.instance_hash_buckets = qos.instance_hash_buckets;
 }
 
 #endif /* DDS4CCM_RESOURCELIMITSQOSPOLICY_H */
